--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.13"
+    "react-scripts": "1.0.13",
+    "styled-components": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
