--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "apollo-client": "^1.9.2",
     "graphql-tag": "^2.4.2",
     "js-cookie": "^2.1.4",
+    "moment": "^2.18.1",
+    "numeral": "^2.0.6",
     "react": "^15.6.1",
     "react-apollo": "^1.4.15",
     "react-dom": "^15.6.1",
